[gd_scene load_steps=2 format=2]

[ext_resource path="res://player/player_scripts/dash_controller.gd" type="Script" id=1]

[node name="dash" type="Node2D"]
script = ExtResource( 1 )

[node name="ghost_timer" type="Timer" parent="."]
wait_time = 0.01

[node name="dash_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ghost_timer" to="." method="_on_ghost_timer_timeout"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
